--- a/q/275331.html
+++ b/q/275331.html
@@ -26,14 +26,41 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>160</td><td>Charcoal</td><td>240904T104850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275345#275345">Neil</a></td></tr>
-<tr d-ix="1"><td>492</td><td>JavaScript ES6</td><td>240903T214854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275335#275335">Arnauld</a></td></tr>
-<tr d-ix="2"><td>503</td><td>JavaScript Node.js</td><td>240904T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275342#275342">l4m2</a></td></tr>
-<tr d-ix="3"><td>972</td><td>Funge98</td><td>240904T052319Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275341#275341">Alt Shif</a></td></tr>
-<tr d-ix="4"><td>610</td><td>Google Sheets</td><td>240903T222006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275336#275336">doubleun</a></td></tr>
-<tr d-ix="5"><td>156</td><td>Vyxal</td><td>240903T214715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275334#275334">emanresu</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>05AB1E</td><td>240904T115701Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275347#275347">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>160</td><td>Charcoal</td><td>240904T104850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275345#275345">Neil</a></td></tr>
+<tr d-ix="2"><td>492</td><td>JavaScript ES6</td><td>240903T214854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275335#275335">Arnauld</a></td></tr>
+<tr d-ix="3"><td>503</td><td>JavaScript Node.js</td><td>240904T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275342#275342">l4m2</a></td></tr>
+<tr d-ix="4"><td>972</td><td>Funge98</td><td>240904T052319Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275341#275341">Alt Shif</a></td></tr>
+<tr d-ix="5"><td>610</td><td>Google Sheets</td><td>240903T222006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275336#275336">doubleun</a></td></tr>
+<tr d-ix="6"><td>156</td><td>Vyxal</td><td>240903T214715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275331/convert-8-bit-brainfuck-to-1-bit-brainfuck-boolfuck/275334#275334">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 160 bytes, score 265</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, score 292 (166 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a>)</h1>
+<pre><code>“&gt;-+.+[&gt;+]&lt;[&lt;]&gt;-[+.[&gt;]+&lt;[+&lt;]--&gt;-+.+[&gt;+]&lt;[&lt;]&gt;-]&lt;[+&lt;]--&gt;[&gt;]+&lt;[+&lt;]&gt;-[+].&lt;-&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,.-&gt;-+.+[&gt;+]&lt;[&lt;]&gt;-[+].&lt;-&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;.-.&lt;--&gt;-“„&gt;-¬9×:'.“&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;“:'-¡IT&gt;&gt;&gt;%èJ
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/275335/52210"><em>@Arnauld</em>'s first JavaScript answer</a>, with some additional score improvements by using replaces.</p>
+<p>Input as a list of code-point integers.</p>
+<p><a href="https://tio.run/##yy9OTMpM/a/0/1HDHDtdbT3taDvtWJtom1g73WhtvWi7WG2baG2bWF1dNMlYmDBcCUhDrJ6Nrp0OKtTTxTAXrMwaFerpAgWBSoHueNQwz0730BrLw9Ot1PWAfBsoADKt1HUPLfQ83B5iZ2eneniF13@lQyv1wnS4Dm2zVypOzi9KtVJQsj@07tA2b/XD7d56QLXFh5fWPmpak25hGKzlb/8/OlZHT1vX2sYOAA" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>“&gt;-+…&gt;-“               # Push this string
+        „&gt;-            # Push &quot;&gt;-&quot;
+           ¬           # Push its first character without popping: &quot;&gt;&quot;
+            9×         # Repeat it 9 times: &quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot;
+              :        # Replace all &quot;&gt;-&quot; with &quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot; in the big string
+        '.            '# Push &quot;.&quot;
+          “&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;“   # Push &quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;
+                    :  # Replace all &quot;.&quot; with &quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot; in the big string
+        '-¡           '# Then split on &quot;-&quot;
+           I           # Push the input-list of codepoint-integers
+            T          # Push 10
+             &gt;&gt;&gt;       # Increase it three times to 13
+                %      # Modulo
+                 è     # 0-based index each into the list of strings
+                  J    # Join this list to a single string
+                       # (which is output implicitly as result)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 160 bytes, score 265</h1>
 <pre><code>⭆Ｓ§⪪⪫⪪⪫⪪-+.+[&gt;+]&lt;[&lt;]-[+.[&gt;]+&lt;[+&lt;]++++-+.+[&gt;+]&lt;[&lt;]-]&lt;[+&lt;]++++&gt;[&gt;]+&lt;[+&lt;]-[+].&lt;++&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,.++-+.+[&gt;+]&lt;[&lt;]-[+].&lt;++&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;.++.&lt;++++-++++¦-×&gt;⁹.×&lt;⁸++℅ι
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=ZZCxDoIwEIbjM_gCplNJaWcMDYkjJkYT3JoOCKhNsBAoxndxYdCEzffxaTxAiejdcHff_X9z6bWJjmERZWFa1_fK7KnznEw3hdIGBwbKYRXm2Nd5ZfoRW_ZsYXwdJxcc5KkyeJkp_d8iShgRHpFccEkFYcKThAvCJYEYLeWAvUEEDsk4EHuc7Mf7kbnjBFmLWzEEsmeIIjh8q05JiZEHYG7BjNgX5UCdjoIDyrqIlQ5TrCwI91buovL9Qw-B6DntXqVxhGRDKIfThOzXLw" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: Port of @Arnauld's JavaScript answer, but modified using @Ausername's compression.</p>
@@ -49,7 +76,7 @@
                         Implicitly print
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), Score: 492</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), Score: 492</h1>
 <p>The scoring scheme makes any compression attempt counter-productive. So what we really want to do is just use as few expensive characters as possible... ¯\_(ツ)_/¯</p>
 <p>Expects an array of ASCII codes.</p>
 
@@ -64,14 +91,14 @@
 </code></pre>
 <p><a href="https://tio.run/##lZBNasMwEIX3PcWglYR@aHbFlpQjdJHlILCRpeBiLGM7Jbd3nIDTuqjQzuy@eW8eMx/1Zz35sR1m2acmLEs0FL1QStWOGeuPlUXruEaund0KudNbySflG@JoVwH@ZshYpRX7/pKU@/5n7DZ73vAnn3tIKzUNXTtXskLCpbZCoSOq7ZtwfY/UM8cjrVmBbunCDJNPYwADuL6OREOAQ1RzOs1j258pc2oMzcUHSgcBnoGxMKwSStAJxWWp7ffVYAzIAxzhDQo4MAGvrHzxqZ9SF1SXzpSc7nEF3GMeyet8J4iUcMLYTyYzTGeYzTCRYSrDMMPcypYb" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 503 score</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 503 score</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([c,...a])=&gt;c?`;+&gt;[&gt;]+&lt;[+&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;;+;-&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;;-;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;;&lt;;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;;&gt;;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;;,;.&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;;.;[&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;[&gt;]+&lt;[+&lt;];[;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;[+&lt;]`.split(';'+c)[1]+f(a):[]
 </code></pre>
 <p><a href="https://tio.run/##jZDBaoQwEIbvfYohl01IDPVWdmL2EXrY4xBYiXGxiIra0re3cUFLJYWdOeX7/@GfzEf5VU5@bIY56/oqLEtdcPJKa106UVh/uaG0ZJ00JI2zW5F0ZiuUmO2C3KgkGz3030yG5vdhcDdZtKjsoXejQm0PvWsa6bktNm3/FRK6Z0bdw33T09A2Mz/hSXpBuZM1L8WZ3NKGGSbfjwEKoHhBVhcMJNR67q/z2HR3LpweQ/XpA@eDAi@gsDBEC2fklJbxKJbppqvC93vNV7mALIcLvMEZcqHgVeCL77upb4Nu@ztn1zXuDGvMIznqfww1Z5IJcWRZgpkEswmmEkwnGCWYi2z5AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Each map is surrounded by <code>;&lt;char&gt;&lt;mapped&gt;;&lt;char&gt;</code> to allow low-cost indicing</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, score 972</h1>
+<div id="pu4" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, score 972</h1>
 <pre><code>~:'+-!#[_&gt;:'--!&gt;#]_&gt;:'&lt;-!&gt;#[_&gt;:'&gt;-!#[_&gt;:',-!#[_&gt;:'.-!&gt;&gt;#]_&gt;:'[-!&gt;&gt;&gt;&gt;&gt;&gt;&gt;#]_']-!#]_&gt;
 ]].....[$&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;]+[&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;+[&lt;+]&gt;[&gt;&quot;;..[$&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;&quot;#;
 [&lt;...............]$&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;]++-[&gt;&gt;+-&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;[&lt;]+&gt;[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot;&gt;
@@ -82,13 +109,13 @@
 <p><a href="https://tio.run/##bZDBCsIwEETv/YumhR62CehFTZb9kWUpCFVQEC8evPjrdZs20aATKNPN8mba43h63M6jPezt/RntNL18B7ZueCDfWVtTI7PD2cUZpcs@Gad36xrPNkrfO9ENHVcibha3BpMEmJIEgRGEmEwotnoqj2lCxehKSUEFq1ywmcw6I4a0ADnUkKJKBQjZ@@tuIbpffSUGKo@pqPeby3YQRLMExTKfAkwQW@Uiazmw@mASQB2IablK3/SvHmb8L1x/QcLHbFmI6GSaNIV6x/IG" rel="nofollow noreferrer">Try it online!</a></p>
 <p>The program never halts, so if you run it using TIO, you have to manually cancel execution in order to view the output.</p>
 </div>
-<div id="pu4" class="pu"><h1>Google Sheets, score 610</h1>
+<div id="pu5" class="pu"><h1>Google Sheets, score 610</h1>
 <pre><code>=switch(A1,&quot;+&quot;,&quot;&gt;[&gt;]+&lt;[+&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;-&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+]&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&lt;&quot;,&quot;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;&gt;&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&quot;,&quot;,&quot;,&quot;&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;.&quot;,&quot;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&gt;;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;&quot;,&quot;[&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;[+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;[&gt;]+&lt;[+&lt;]&quot;,&quot;]&quot;,&quot;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;+&lt;&lt;&lt;&lt;&lt;&lt;&lt;&lt;+[&gt;+]&lt;[&lt;]&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;]&lt;[+&lt;]&quot;)
 </code></pre>
 <p>Dumb solution, compression doesn't seem to pay because of the scoring system.</p>
 <p><img src="https://i.sstatic.net/nuY05CMP.png" alt="screenshot" /></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 156 bytes, score 247</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 156 bytes, score 247</h1>
 <pre><code>kT`;&gt;+-+[&gt;+]&lt;[&lt;];&gt;[+-[&gt;]+&lt;[+&lt;]++;&gt;+-+[&gt;+]&lt;[&lt;];&gt;]&lt;[+&lt;]++-&lt;++;&gt;++;&gt;+-+[&gt;+]&lt;[&lt;];&gt;[+]-&lt;++&gt;[&gt;]+&lt;[+&lt;];&gt;[+]-&lt;++&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.&gt;.-++&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,&gt;,-`‛-;‛&lt;&gt;f8*Ŀ‛++/Ŀ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJrVGA7PistK1s+K108WzxdOz5bKy1bPl0rPFsrPF0rKzs+Ky0rWz4rXTxbPF07Pl08Wys8XSsrLTwrKzs+Kys7PistK1s+K108WzxdOz5bK10tPCsrPls+XSs8Wys8XTs+WytdLTwrKz4uPi4+Lj4uPi4+Lj4uPi4tKys+LD4sPiw+LD4sPiw+LD4sLWDigJstO+KAmzw+ZjgqxL/igJsrKy/EvyIsIiIsIlwiWytdPC4+LC1cIiJd" rel="nofollow noreferrer">Try it Online!</a></p>
